[package]
name = "buffr-permissions"
description = "SQLite-backed per-origin permissions store for buffr."
version = "0.1.1"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/kryptic-sh/buffr-permissions"
homepage = "https://buffr.kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
readme = "README.md"

[dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
